--- a/index.html
+++ b/index.html
@@ -13,8 +13,6 @@
     <link rel="stylesheet" href="css/main.css" />
   </head>
   <body>
-    <header></header>
-    <nav></nav>
     <main>
       <div class="info">
         <div class="info__name">
@@ -32,28 +30,64 @@
       </div>
       <div class="skills">
         <div class="skills__title">
-          <h2>My proudest work</h2>
+          <h2>Projects</h2>
         </div>
+
         <div class="skills__projects">
-          <a class="projects__project1" href=""></a>
-          <p>Brief description.</p>
-          <a class="projects__project2" href=""></a>
-          <p>Brief description.</p>
+          <div class="projects__project">
+            <div class="project__screenshot">
+              <img class="screenshot__image" src="images/site.jpg" alt="" />
+            </div>
+            <div class="project__about">
+              <p class="about__name">Some name</p>
+              <div class="about__buttons">
+                <a href="">Visit</a>
+                <a href="">Code</a>
+              </div>
+            </div>
+          </div>
+          <div class="projects__project">
+            <div class="project__screenshot">
+              <img class="screenshot__image" src="images/site.jpg" alt="" />
+            </div>
+            <div class="project__about">
+              <p class="about__name">Some name</p>
+              <div class="about__buttons">
+                <a href="">Visit</a>
+                <a href="">Code</a>
+              </div>
+            </div>
+          </div>
+          <div class="projects__project">
+            <div class="project__screenshot">
+              <img class="screenshot__image" src="images/site.jpg" alt="" />
+            </div>
+            <div class="project__about">
+              <p class="about__name">Some name</p>
+              <div class="about__buttons">
+                <a href="">Visit</a>
+                <a href="">Code</a>
+              </div>
+            </div>
+          </div>
+          <div class="projects__project">
+            <div class="project__screenshot">
+              <img class="screenshot__image" src="images/site.jpg" alt="" />
+            </div>
+            <div class="project__about">
+              <p class="about__name">Some name</p>
+              <div class="about__buttons">
+                <a href="">Visit</a>
+                <a href="">Code</a>
+              </div>
+            </div>
+          </div>
         </div>
-        <div class="skills__projects">
-          <a class="projects__project1" href=""></a>
-          <p>Brief description.</p>
-          <a class="projects__project2" href=""></a>
-          <p>Brief description.</p>
-        </div>
+
         <div class="skills__title">
           <h2>The stuff I work with</h2>
-        </div>
-        <div class="skills__languages">
-          <img class="languages__html" src="images/HTML5Logo.png" alt="" />
-          <img class="languages__css" src="images/CSSLogo.png" alt="" />
-          <img class="languages__js" src="images/JSLogo.png" alt="" />
-          <img class="languages__csharp" src="images/CSharpLogo.png" alt="" />
+          <p>Languages: C#, HTML5, CSS, SASS, JS</p>
+          <p>Frameworks: Tailwind</p>
         </div>
       </div>
     </main>
