--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="skills__projects">
           <div class="projects__project">
             <div class="project__screenshot">
-              <img class="screenshot__image" src="images/site.jpg" alt="" />
+              <img class="screenshot__image" src="images/reddit.png" alt="" />
             </div>
             <div class="project__about">
               <p class="about__name">Some name</p>
@@ -48,7 +48,7 @@
           </div>
           <div class="projects__project">
             <div class="project__screenshot">
-              <img class="screenshot__image" src="images/site.jpg" alt="" />
+              <img class="screenshot__image" src="images/reddit.png" alt="" />
             </div>
             <div class="project__about">
               <p class="about__name">Some name</p>
@@ -60,7 +60,7 @@
           </div>
           <div class="projects__project">
             <div class="project__screenshot">
-              <img class="screenshot__image" src="images/site.jpg" alt="" />
+              <img class="screenshot__image" src="images/reddit.png" alt="" />
             </div>
             <div class="project__about">
               <p class="about__name">Some name</p>
@@ -72,7 +72,7 @@
           </div>
           <div class="projects__project">
             <div class="project__screenshot">
-              <img class="screenshot__image" src="images/site.jpg" alt="" />
+              <img class="screenshot__image" src="images/reddit.png" alt="" />
             </div>
             <div class="project__about">
               <p class="about__name">Some name</p>
