--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
               <img class="screenshot__image" src="images/reddit.png" alt="" />
             </div>
             <div class="project__about">
-              <p class="about__name">Some name</p>
+              <p class="about__name">Reddit</p>
+              <p class="about__technologies">HTML5, CSS, JS</p>
               <div class="about__buttons">
                 <a href="">Visit</a>
                 <a href="">Code</a>
@@ -51,7 +52,8 @@
               <img class="screenshot__image" src="images/reddit.png" alt="" />
             </div>
             <div class="project__about">
-              <p class="about__name">Some name</p>
+              <p class="about__name">Reddit</p>
+              <p class="about__technologies">HTML5, CSS, JS</p>
               <div class="about__buttons">
                 <a href="">Visit</a>
                 <a href="">Code</a>
@@ -63,7 +65,8 @@
               <img class="screenshot__image" src="images/reddit.png" alt="" />
             </div>
             <div class="project__about">
-              <p class="about__name">Some name</p>
+              <p class="about__name">Reddit</p>
+              <p class="about__technologies">HTML5, CSS, JS</p>
               <div class="about__buttons">
                 <a href="">Visit</a>
                 <a href="">Code</a>
@@ -75,7 +78,8 @@
               <img class="screenshot__image" src="images/reddit.png" alt="" />
             </div>
             <div class="project__about">
-              <p class="about__name">Some name</p>
+              <p class="about__name">Reddit</p>
+              <p class="about__technologies">HTML5, CSS, JS</p>
               <div class="about__buttons">
                 <a href="">Visit</a>
                 <a href="">Code</a>
