--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="skills__title">
           <h2>Projects</h2>
         </div>
-
+        <div class="divider"></div>
         <div class="skills__projects">
           <div class="projects__project">
             <div class="project__screenshot">
@@ -87,7 +87,7 @@
             </div>
           </div>
         </div>
-
+        <div class="divider"></div>
         <div class="skills__title">
           <h2>The stuff I work with</h2>
           <p>Languages: C#, HTML5, CSS, SASS, JS</p>
